// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SquareGame/Bord Default 1`] = `
<div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Default And Triangle 1`] = `
<div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ○
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ○
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ○
    </button>
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ×
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ×
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Star 1`] = `
<div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Triangle 1`] = `
<div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="css-14zlpy1"
  >
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="css-16ujn8c"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Game Default 1`] = `
<div
  className="css-1xhj18k"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="css-14zlpy1"
      >
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
      </div>
      <div
        className="css-14zlpy1"
      >
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
      </div>
      <div
        className="css-14zlpy1"
      >
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
        <button
          className="css-16ujn8c"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="css-s8vbhp"
  >
    <div>
      次のプレイヤー: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Square Default 1`] = `
<button
  className="css-16ujn8c"
/>
`;

exports[`Storyshots SquareGame/Square Star 1`] = `
<button
  className="css-16ujn8c"
>
  ☆
</button>
`;

exports[`Storyshots SquareGame/Square Triangle 1`] = `
<button
  className="css-16ujn8c"
>
  △
</button>
`;
